testsuite/invalid-types/call2.qc
void(float, string, entity) fun = #1;

void() main = {
	local string x;
	fun(x, x, x);
};
